--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "EXPO_NO_TELEMETRY=1 expo start",
+    "dev": "cross-env EXPO_NO_TELEMETRY=1 expo start",
     "build:web": "expo export --platform web",
     "lint": "expo lint",
     "deploy": "./deploy.sh",
@@ -33,6 +33,7 @@
     "expo-status-bar": "~3.0.8",
     "expo-symbols": "~1.0.7",
     "expo-system-ui": "~6.0.7",
+    "expo-updates": "~29.0.10",
     "expo-web-browser": "^15.0.7",
     "lucide-react-native": "^0.475.0",
     "react": "19.1.0",
@@ -46,14 +47,14 @@
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "^0.21.0",
     "react-native-webview": "13.15.0",
-    "spotify-web-api-node": "^5.0.2",
-    "expo-updates": "~29.0.10"
+    "spotify-web-api-node": "^5.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@expo/metro-runtime": "^6.1.2",
     "@types/react": "~19.1.10",
     "@types/spotify-web-api-node": "^5.0.11",
+    "cross-env": "^10.0.0",
     "react-native-worklets": "^0.5.1",
     "typescript": "~5.9.2"
   }
